# crewai-a2a-settlement

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  ci-local.sh  pyproject.toml  requirements-ci.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crewai_a2a_settlement/: __init__.py  client.py  config.py  models.py  shim_client.py  transcript.py
examples/: negotiation.py  research_scraper.py
tests/: conftest.py  test_client.py  test_transcript.py
tests/future/: README.md  test_escrow_lifecycle.py
