[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-a2a-settlement"
version = "0.1.0"
description = "Bridge CrewAI multi-agent orchestration with the A2A Settlement Exchange for escrow-based agent-to-agent payments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "a2a-settlement" },
]
keywords = ["crewai", "a2a", "settlement", "escrow", "agents", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.80",
    "crewai-tools>=0.14",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/a2a-settlement/crewai-a2a-settlement"
Repository = "https://github.com/a2a-settlement/crewai-a2a-settlement"
Issues = "https://github.com/a2a-settlement/crewai-a2a-settlement/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
norecursedirs = ["tests/future"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
